# LITNUP

./: .editorconfig  .gas-snapshot  .gitattributes  .gitignore  AUDIT_REMEDIATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTNET_LAUNCH_PLAN.md  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  security.yml
.github/workflows/: agent-runtime.yml  contracts.yml  release.yml  sdk.yml  security.yml  subgraph.yml
agent-runtime/: .env.example  README.md  pyproject.toml  requirements.txt
agent-runtime/agent_runtime/: __init__.py  agent.py  backtest.py  cli.py  metrics.py  monitor.py  oracle_signer.py  paper_trade.py  pnl_tracker.py  price_feed.py
agent-runtime/agent_runtime/strategies/: __init__.py  base.py  basis.py  funding_arb.py  meanrev.py  momentum.py  options_carry.py  pairs.py  stat_arb.py  vol_carry.py
agent-runtime/agent_runtime/venues/: __init__.py  aerodrome.py  base.py  hyperliquid.py  paper.py
agent-runtime/scripts/: backtest.py  gen_signer.py
agent-runtime/tests/: test_backtest.py  test_cli.py  test_eip712_roundtrip.py  test_metrics.py  test_oracle_signer.py  test_pnl_tracker.py
contracts/: .env.example  README.md  foundry.toml  slither.config.json
contracts/deployments/: 84532.json
contracts/script/: Deploy.s.sol  Lifecycle.s.sol
contracts/src/: AgentRegistry.sol  BuybackBurn.sol  DelegateRegistry.sol  EmissionScheduler.sol  InsuranceFund.sol  LitToken.sol  LitnupToken.sol  MerkleAirdrop.sol  PauseGuardian.sol  StakingVault.sol  (+5 more)
deploy/: DEPLOYMENT.md  Deploy.s.sol  Dockerfile.agent-runtime  docker-compose.yml  hostinger-deployment.md
docs/: agent-operator-onboarding.md  faq-comprehensive.md  faq.md  litepaper.md  strategy-library.md  tge-launch-strategy.md  tokenomics-simulator.html  tokenomics.md  whitepaper.md
sdk-typescript/: README.md  package.json  tsconfig.json
subgraph/: README.md  networks.json  package.json  schema.graphql  subgraph.yaml
(+54 files in other folders)
